<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ge.unicard.pos.ui.widgets.PrinterLayout
        android:id="@+id/printer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logotype_check"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@mipmap/logoprint"/>

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/logo_text"
                style="@style/PrintLayout.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                tools:text="MISA HOME" />

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/type_card"
                style="@style/PrintLayout.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                tools:text="TYPE CARD" />

            <Space
                android:layout_width="wrap_content"
                android:minWidth="300dp"
                android:layout_height="1px" />

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/org_name"
                style="@style/PrintLayout.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                tools:text="Organisation" />

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/address"
                style="@style/PrintLayout.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lines="2"
                android:maxLines="3"
                android:gravity="center_horizontal"
                tools:text="Address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_terminal_id" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/terminal_id"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_merchant_id" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/merchant_id"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_receipt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_receipt" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/receipt_id"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/tran_type"
                style="@style/PrintLayout.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                tools:text="Tran Type" />

            <ge.unicard.pos.ui.widgets.CTextView
                android:id="@+id/status"
                style="@style/PrintLayout.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/_000000"
                android:gravity="end"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:textColor="@color/_FFFFFF"
                android:textStyle="bold"
                tools:text="Status" />

            <TextView
                style="@style/PrintLayout.DashedDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_paid"
                    android:gravity="start"
                    android:text="@string/print_layout_paid" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"

                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_title_amount"
                    android:gravity="start"
                    android:text="@string/print_layout_amount" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/amount"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:id="@+id/text_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_points" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/points"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <TextView
                style="@style/PrintLayout.DashedDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_card" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/card"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/linear_resp_code"
                android:orientation="horizontal">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_resp_code"
                    android:weightSum="1" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/resp_code"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_auto_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="ავტ. კოდი" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

              <!--  <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="ავტ. კოდი" />-->

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/stan"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ge.unicard.pos.ui.widgets.CTextView
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/print_layout_date" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ge.unicard.pos.ui.widgets.CTextView
                    android:id="@+id/date"
                    style="@style/PrintLayout.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    tools:text="Id" />

            </LinearLayout>

            <TextView
                style="@style/PrintLayout.DashedDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ge.unicard.pos.ui.widgets.CTextView
                style="@style/PrintLayout.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/print_layout_footer"
                tools:text="@string/print_layout_footer" />

            <TextView
                style="@style/PrintLayout.DashedDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ge.unicard.pos.ui.widgets.PrinterLayout>

</FrameLayout>