<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register_new_user.RegisterNFSActivity">

   <!-- <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/_8E82EB">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Name"/>
        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Last name"/>
        <TextView
            android:id="@+id/doc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Document number"/>
        <TextView
            android:id="@+id/date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Date birth"/>
        <TextView
            android:id="@+id/country_citizen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Country citizen"/>


    </LinearLayout>
    </android.support.v7.widget.CardView> -->

    <LinearLayout
        android:id="@+id/toolbar2"
        android:background="@color/_707070"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/back2"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/arrow48"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/toolbar_register_client"
                android:textSize="16dp"
                android:gravity="center"
                android:textColor="@color/_FFFFFF"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <ImageView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/logo"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_nfc_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_mrz_scan"
        android:textColor="@color/_000000"
        android:textSize="24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/open_nfs_scan"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"/>

    <ImageView
        android:id="@+id/open_nfs_scan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/text_nfc_scan" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <Button
            android:layout_weight="1"
            android:background="@color/green"
            android:textColor="@color/_FFFFFF"
            android:layout_margin="8dp"
            android:id="@+id/register_nfs_forward"
            android:visibility="invisible"
            android:text="NEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:textColor="@color/_707070"
            android:layout_margin="8dp"
            android:gravity="center"
            android:id="@+id/register_nfs_back"
            android:text="@string/register_mrz_scan_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>